--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -267,7 +267,7 @@
 				   </div>
 						   <div class="col-md-5">
 						   
-    <img src="images/ei-table-insurable-e.JPG" class="img-responsive" alt="Screenshot of EI premiums table, highlighting the field: Insurable Earnings ">
+    <img src="images/ei-step4-eng.png" class="img-responsive" alt="Screenshot of EI premiums table, highlighting the field: Insurable Earnings ">
    
   
   </div>
@@ -281,7 +281,7 @@
 				   </div>
 						   <div class="col-md-5">
 						   
-     <img src="images/ei-table-premium-e.JPG" class="img-responsive" alt="Screenshot of EI premiums table, highlighting the field:  EI premium">
+     <img src="images/ei-step5-eng.png" class="img-responsive" alt="Screenshot of EI premiums table, highlighting the field:  EI premium">
    
   
   </div>
