removed flags on content pages

--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -86,18 +86,18 @@
 	
 <p >Applies to employment performed in and outside Canada, where employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
-<li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
-<li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
-<li class="mrgn-rght-md"><img src="../images/flag-mb.png" class="mrgn-rght-sm" alt="">MB</li>
-<li class="mrgn-rght-md"><img src="../images/flag-nb.png" class="mrgn-rght-sm" alt=""> NB</li>
-<li class="mrgn-rght-md"><img src="../images/flag-nl.png" class="mrgn-rght-sm" alt=""> NL</li>
-<li class="mrgn-rght-md"><img src="../images/flag-nt.png" class="mrgn-rght-sm" alt=""> NT</li>
-<li class="mrgn-rght-md"><img src="../images/flag-ns.png" class="mrgn-rght-sm" alt=""> NS</li>
-<li class="mrgn-rght-md"><img src="../images/flag-nu.png" class="mrgn-rght-sm" alt=""> NU</li>
-<li class="mrgn-rght-md"><img src="../images/flag-on.png" class="mrgn-rght-sm" alt=""> ON</li>
-<li class="mrgn-rght-md"><img src="../images/flag-pe.png" class="mrgn-rght-sm" alt=""> PE</li>
-<li class="mrgn-rght-md"><img src="../images/flag-sk.png" class="mrgn-rght-sm" alt=""> SK</li>
-<li class="mrgn-rght-md"><img src="../images/flag-yt.png" class="mrgn-rght-sm" alt=""> YT</li>
+<li class="mrgn-rght-md"> AB</li>
+<li class="mrgn-rght-md"> BC</li>
+<li class="mrgn-rght-md">MB</li>
+<li class="mrgn-rght-md"> NB</li>
+<li class="mrgn-rght-md"> NL</li>
+<li class="mrgn-rght-md"> NT</li>
+<li class="mrgn-rght-md"> NS</li>
+<li class="mrgn-rght-md"> NU</li>
+<li class="mrgn-rght-md"> ON</li>
+<li class="mrgn-rght-md"> PE</li>
+<li class="mrgn-rght-md"> SK</li>
+<li class="mrgn-rght-md"> YT</li>
 
 </ul>  
 
