--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -104,7 +104,7 @@
 
 <p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
-<li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
+<li class="mrgn-rght-md"> QC</li>
 
 
 </ul>  
