--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -276,7 +276,7 @@
  <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
                      <li><a href="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html">Automobile or motor vehicle benefits – Allowances or reimbursements provided to an employee for the use of their own vehicle</a></li>
-		 
+		  <li><a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html">Motor vehicle provided by the employer</a></li>		 
                   </ul>
 
  <div class="alert alert-info">
@@ -290,7 +290,7 @@
                                 <h5 class="text-muted">Employer</h5>Includes a person related to the employer</li>
 <li class="cnjnctn-col">
                                  
-                                <h5 class="text-muted">Employee and shareholder</h5>Includes a person related to the employee or shareholder</li>
+                                <h5 class="text-muted">Employee</h5>Includes a person who does not deal at arm’s length with  the employee, a an individual who holds an office or a person who does not deal at arm’s length with that individual</li>
 </ul>
 <h2 class="h3">On this page</h2>
 <ul>
