--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -284,14 +284,17 @@
 
 </div>
 <p class="mrgn-bttm-lg">You may provide an automobile to your employee or a shareholder to use in performing their duties of office or employment. Generally, the benefit from personal driving of the employer provided automobile is  a taxable benefit. </p>
+
+<details><summary>What is included in the terms employer and employee </summary>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
                                  
                                 <h5 class="text-muted">Employer</h5>Includes a person related to the employer</li>
 <li class="cnjnctn-col">
                                  
-                                <h5 class="text-muted">Employee</h5>Includes a person who does not deal at arm’s length with  the employee, a an individual who holds an office or a person who does not deal at arm’s length with that individual</li>
+                                <h5 class="text-muted">Employee</h5>Includes a person who does not deal at arm’s length with the employee, or an individual who holds an office or a person who does not deal at arm’s length with that individual</li>
 </ul>
+</details>
 <h2 class="h3">On this page</h2>
 <ul>
 
