--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -339,11 +339,11 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no</strong> personal driving, the use of the employer-provided automobile is <strong>not </strong>a taxable benefit. <strong>Do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is <strong>personal driving</strong>, the use of the employer-provided automobile may be a taxable benefit. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if any exceptions apply to the automobile benefit</a></p></li>
 </ul>
 </li>
 
-<li><h3 id="step4">Determine if special considerations apply to the automobile benefit</h3>
+<li><h3 id="step4">Determine if any exceptions apply to the automobile benefit</h3>
 <div data-ajax-replace="ajax/special-vehicle.txt"></div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
