--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -285,6 +285,7 @@
 </div>
 <p class="mrgn-bttm-lg">You may provide an automobile to your employee or a shareholder to use in performing their duties of office or employment. Generally, the benefit from personal driving of the employer provided automobile is  a taxable benefit. </p>
 
+<div id="ajax-includes">
 <details><summary>What is included in the terms employer and employee </summary>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -295,6 +296,7 @@
                                 <h5 class="text-muted">Employee</h5>Includes a person who does not deal at arm’s length with the employee, or an individual who holds an office or a person who does not deal at arm’s length with that individual</li>
 </ul>
 </details>
+</div>
 <h2 class="h3">On this page</h2>
 <ul>
 
