--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -284,14 +284,8 @@
 </div>
 
 <p class="mrgn-bttm-lg">You may provide a motor vehicle to your employee or a shareholder to use in performing their duties of office or employment. Generally, the benefit from personal driving of the employer provided motor vehicle is a taxable benefit.</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">
-                                 
-                                <h5 class="text-muted">Employer</h5>Includes a person related to the employer</li>
-<li class="cnjnctn-col">
-                                 
-                                <h5 class="text-muted">Employee and shareholder</h5>Includes a person related to the employee or shareholder</li>
-</ul>
+
+ <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/automobile.html"></div>		 
 
 <h2 class="h3">On this page</h2>
 <ul>
@@ -340,11 +334,11 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no</strong> personal driving, the use of the employer-provided motor vehicle is <strong>not </strong>a taxable benefit. <strong>Do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span>  If there is <strong>personal driving</strong>, the use of the employer-provided motor vehicle may be a taxable benefit. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the motor vehicle benefit</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if any exceptions apply to the automobile benefit</a></p></li>
 </ul>
 </li>
 
-<li><h3 id="step4">Determine if special considerations apply to the motor vehicle benefit</h3>
+<li><h3 id="step4">Determine if any exceptions apply to the automobile benefit</h3>
  <div data-ajax-replace="ajax/special-vehicle.txt"></div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
