--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -359,7 +359,7 @@
 <!--//Start of taxable-vehicle.txt //-->
 <div id="ajax-taxable">
 <h4>Non-taxable situation</h4>
-<p>Under the Income Tax Act, if you <a href="#availability1" aria-controls="mid-screen-bg" class="overlay-lnk" role="button">make a vehicle available&nbsp;<span class="far fa-question-circle"></span></a> to your employee (step 2), the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following (step 3) apply:</p>
+<p>Under the Income Tax Act, if you <a href="#availability1" aria-controls="mid-screen-bg" class="overlay-lnk" role="button">make a vehicle available&nbsp;<span class="far fa-question-circle"></span></a> to your employee (step 2) because of their current, previous, or intended office or employment, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following (step 3) apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">There is <a href="#personal1"  aria-controls="mid-screen-bg" class="overlay-lnk" role="button">no personal driving&nbsp;<span class="far fa-question-circle"></span></a></li>
