--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -285,7 +285,7 @@
 
 <p class="mrgn-bttm-lg">You may provide a motor vehicle to your employee or a shareholder to use in performing their duties of office or employment. Generally, the benefit from personal driving of the employer provided motor vehicle is a taxable benefit.</p>
 
- <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/automobile.html"></div>		 
+ <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/automobile.html#ajax-includes"></div>		 
 
 <h2 class="h3">On this page</h2>
 <ul>
