--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -405,18 +405,21 @@
 <div data-ajax-replace="ajax/records-vehicle.txt"></div>
 <br/>
 <h4>Get the required records from your employee</h4>
-<p id="reduce"><strong>To meet condition 1 of 4 for the reduced standby charge</strong>, you must get the required records from your employee to accurately calculate the vehicle benefit. Based on these records, you need to determine if you can use the reduced standby charge calculation. </p>
+<p id="reduce">Your employee may be eligible for the <strong>reduced standby charge</strong> if your employee gives you the <strong>required records</strong> to accurately calculate the vehicle benefit. Based on these records, you need to determine if you can use the reduced standby charge calculation. </p>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step10">Step 10 - Calculate the standby charge benefit</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the required detailed records and you received a copy, the benefit meets the <strong>condition 1 of 4 for the reduced standby charge</strong>.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is required to use the vehicle in connection with or in the course of an office or employment</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the required detailed records and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a></p></li>
 </ul>
 </li>
 
+<li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
+</li>
 
-<li><h3 id="step7">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h3>
+
+<li><h3 id="step8">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h3>
 <div id="ajax-work">
 <p id="require"><strong>To meet condition 2 of 4 for the reduced standby charge</strong>, you need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
 <hr>
