--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -416,10 +416,11 @@
 </li>
 
 <li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
-</li>
+
+ <ol class="lst-stps-sub ld-zr stps-strpd">
 
 
-<li><h3 id="step8">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h3>
+<li><details><summary><h3 id="step7a">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h3></summary>
 <div id="ajax-work">
 <p id="require"><strong>To meet condition 2 of 4 for the reduced standby charge</strong>, you need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
 <hr>
@@ -431,9 +432,8 @@
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate if the distance travelled is 50% or more (primarily) business driving</a></p></li>
 
 </ul>
-</div></li>
-
-<li><h3 id="step8">Calculate if the distance travelled is <strong>50% or more (primarily)</strong> business driving</h3>
+</div></details></li>
+<li><details><summary><h3 id="step7b">Calculate if the distance travelled is <strong>50% or more (primarily)</strong> business driving</h3></summary>
 <div id="ajax-distance">
 <p id="percent"><strong>To meet condition 3 of 4 for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
@@ -521,12 +521,9 @@
          <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If the automobile is driven <strong>50% or more (primarily)</strong> for business driving, the benefit meets the <strong>condition 3 of 4 for the reduced standby charge</strong>. </p>
 	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
-			
-    
+</div></details></li>
 
-</div></li>
-
-<li><h3 id="step9">Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</h3> 
+<li><details><summary><h3 id="step7c">Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</h3></summary> 
 <p><strong>To meet condition 4 of 4 for the reduced standby charge</strong>, use the following to calculate the personal-use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
 
  <ol class="lst-stps-sub ld-zr stps-strpd">
@@ -665,7 +662,7 @@
 </ul>
 </details></details>
 
-</li></ol> 
+</li></ol> </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal-use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step10">Step 10 - Calculate the standby charge benefit</a></p></li>
@@ -673,6 +670,13 @@
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#standbyreduce">Step 10 - Calculate the reduced standby charge benefit</a></p> </li>
                           </ul>
 </li>
+	 
+
+
+</ol>
+
+</li>
+
 
 <li><h3 id="step10">Calculate the standby charge benefit</h3>
 <p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> You can use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> that will calculate the benefit for you.</p>
