--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -420,22 +420,22 @@
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
 
-<li><details><summary><h3 id="step7a">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h3></summary>
+<li><details><summary><h4 id="step7a">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h4></summary>
 <div id="ajax-work">
-<p id="require"><strong>To meet condition 2 of 4 for the reduced standby charge</strong>, you need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
+<p id="require"><strong>To meet one of the conditions for the reduced standby charge</strong>, you need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use the automobile as part of their duties of an office or employment, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step10">Step 10 - Calculate the standby charge benefit</a></p>  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>condition 2 of 4 for the reduced standby charge</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate if the distance travelled is 50% or more (primarily) business driving</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p>  </li>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7b">Step 7b - Calculate if the distance travelled is 50% or more (primarily) business driving</a></p></li>
 
 </ul>
 </div></details></li>
-<li><details><summary><h3 id="step7b">Calculate if the distance travelled is <strong>50% or more (primarily)</strong> business driving</h3></summary>
+<li><details><summary><h4 id="step7b">Calculate if more than 50% of the distance travelled is for business driving</h4></summary>
 <div id="ajax-distance">
-<p id="percent"><strong>To meet condition 3 of 4 for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
+<p id="percent"><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
@@ -475,7 +475,7 @@
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Judith can use an automobile that was made available by her employer during 150 days of the year. Judith was required to use the automobile in connection with her employment. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving out of a total of 27,525 km. </p>
+<p>Judith is allowed to use an automobile that was made available by her employer during 150 days of the year for personal use. Judith was required to use the automobile in connection with her employment. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving out of a total of 27,525 km. </p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
@@ -517,14 +517,14 @@
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step10">Step 10 - Calculate the standby charge benefit</a></p></li>
-         <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If the automobile is driven <strong>50% or more (primarily)</strong> for business driving, the benefit meets the <strong>condition 3 of 4 for the reduced standby charge</strong>. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
+         <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If <strong>more than 50%</strong> of the distance travelled is for business driving, the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7c">Step 7c - Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
 </div></details></li>
 
-<li><details><summary><h3 id="step7c">Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</h3></summary> 
-<p><strong>To meet condition 4 of 4 for the reduced standby charge</strong>, use the following to calculate the personal-use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
+<li><details><summary><h4 id="step7c">Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</h4></summary> 
+<p><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the personal use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
 
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
