--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -419,23 +419,22 @@
 
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
-
-<li><details><summary><h4 id="step7a">Determine if the employee is <strong>required to use the automobile in connection with or in the course of an office or employment</strong></h4></summary>
+<li><details><summary>Condition 1: Determine if the employee is required to use the automobile in connection with or in the course of an office or employment</summary>
 <div id="ajax-work">
-<p id="require"><strong>To meet one of the conditions for the reduced standby charge</strong>, you need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
+<p id="step7a"><strong>To meet one of the conditions for the reduced standby charge</strong>, you need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use the automobile as part of their duties of an office or employment, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7b">Step 7b - Calculate if the distance travelled is 50% or more (primarily) business driving</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7b">Step 7b - Condition 2: Calculate if the distance travelled is 50% or more (primarily) business driving</a></p></li>
 
 </ul>
 </div></details></li>
-<li><details><summary><h4 id="step7b">Calculate if more than 50% of the distance travelled is for business driving</h4></summary>
+<li><details><summary>Condition 2: Calculate if more than 50% of the distance travelled is for business driving</summary>
 <div id="ajax-distance">
-<p id="percent"><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
+<p id="step7b><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
@@ -519,21 +518,19 @@
 	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
          <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If <strong>more than 50%</strong> of the distance travelled is for business driving, the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7c">Step 7c - Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7c">Step 7c - Condition 3: Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
 </div></details></li>
 
-<li><details><summary><h4 id="step7c">Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</h4></summary> 
-<p><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the personal use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
+<li><details><summary>Condition 3: Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</summary> 
+<p id="step7c"><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the personal use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
 
- <ol class="lst-stps-sub ld-zr stps-strpd">
-
-<li><details><summary>Determine the actual number of kilometres travelled for personal driving</summary> 
+<details><summary>Determine the actual number of kilometres travelled for personal driving</summary> 
 <p id="step9a">Based on the <a href="#records" aria-controls="centred-popup" class="wb-lbx" role="button">required information (logbook)&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, determine the actual number of kilometres travelled for personal driving.</p>
 <p> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 </details>
-</li>
-<li><details><summary>Calculate the limit that applies to the number of kilometres travelled for personal driving</summary> 
+
+<details><summary>Calculate the limit that applies to the number of kilometres travelled for personal driving</summary> 
 <p id="step9b">The number of kilometres travelled for personal driving cannot exceed 1,667 kilometres per 30-day period or 20,004 kilometres in the year to meet one of the conditions for the reduced standby charge.</p>
 <p>Use the following to calculate the limit that applies to the number of kilometres travelled for personal driving:</p>
 
@@ -612,8 +609,9 @@
                                     </span></span> </li>
 
 </ul>
-</details></details> </li>  
-<li><details><summary>Calculate the personal-use quotient for the reduced standby charge</summary> 
+</details></details> 
+ 
+<details><summary>Calculate the personal-use quotient for the reduced standby charge</summary> 
 <p id="step9c">Use the following to calculate the personal use quotient:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
@@ -662,13 +660,17 @@
 </ul>
 </details></details>
 
-</li></ol> </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal-use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step10">Step 10 - Calculate the standby charge benefit</a></p></li>
                          <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal-use quotient is <strong>less than 1</strong> (calculations from step 9a, 9b and 9C), the benefit meets the <strong>condition 4 of 4 for the reduced standby charge</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#standbyreduce">Step 10 - Calculate the reduced standby charge benefit</a></p> </li>
                           </ul>
+
+</details>
+
+<p><span class="fas fa-check fa-lg text-success"></span> If the the employee meets all conditions to be eligible for the reduced standby charge continue to: <a href="#standbyreduce">Step 10 - Calculate the reduced standby charge benefit</a>.</p>
+
 </li>
 	 
 
