--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -416,6 +416,7 @@
 </li>
 
 <li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
+<p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:<p>
 
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
@@ -432,9 +433,10 @@
 
 </ul>
 </div></details></li>
+	 
 <li><details><summary>Condition 2: Calculate if more than 50% of the distance travelled is for business driving</summary>
 <div id="ajax-distance">
-<p id="step7b><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
+<p id="step7b"><strong>To meet one of the conditions for the reduced standby charge</strong>, use the following to calculate the share of the distance travelled for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
