--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -416,7 +416,7 @@
 </li>
 
 <li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
-<p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:<p>
+<p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:</p>
 
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
