--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -418,23 +418,23 @@
 <li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
 <p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:</p>
 
-<details><summary>Condition 1: Determine if the employee is required to use the automobile in connection with or in the course of an office or employment</summary>
+<details><summary><strong>Condition 1</strong>: The employee is required to use the automobile in connection with or in the course of an office or employment</summary>
 <div id="ajax-work">
-<p id="step7a">You need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
+<p id="cond1">You need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use the automobile as part of their duties of an office or employment, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7b">Step 7b - Condition 2: Calculate if the distance travelled is 50% or more (primarily) business driving</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond2">Condition 2: More than 50% of the distance travelled is for business driving</a></p></li>
 
 </ul>
 </div></details>
 	 
-<details><summary>Condition 2: Calculate if more than 50% of the distance travelled is for business driving</summary>
+<details><summary><strong>Condition 2</strong>: More than 50% of the distance travelled is for business driving</summary>
 <div id="ajax-distance">
-<p id="step7b">Use the following to calculate the share of the distance travelled for business driving:</p>
+<p id="cond2">You need to determine if more than 50% of the distance travelled is for business driving. Use the following to calculate the share of the distance travelled for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
@@ -518,21 +518,21 @@
 	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
          <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If <strong>more than 50%</strong> of the distance travelled is for business driving, the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7c">Step 7c - Condition 3: Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond3">Condition 3: Number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
 </div></details>
 
-<details><summary>Condition 3: Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</summary> 
-<p id="step7c">Use the following to calculate the personal use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
+<details><summary><strong>Condition 3</strong>: Number of kilometres of personal driving is within the limit for the reduced standby charge</summary> 
+<p id="cond3">Use the following to calculate the personal use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
 <li><details><summary>Determine the actual number of kilometres travelled for personal driving</summary> 
-<p id="step9a">Based on the <a href="#records" aria-controls="centred-popup" class="wb-lbx" role="button">required information (logbook)&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, determine the actual number of kilometres travelled for personal driving.</p>
+<p id="step7a">Based on the <a href="#records" aria-controls="centred-popup" class="wb-lbx" role="button">required information (logbook)&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, determine the actual number of kilometres travelled for personal driving.</p>
 <p> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 </details></li>
 
 <li><details><summary>Calculate the limit that applies to the number of kilometres travelled for personal driving</summary> 
-<p id="step9b">The number of kilometres travelled for personal driving cannot exceed 1,667 kilometres per 30-day period or 20,004 kilometres in the year to meet one of the conditions for the reduced standby charge.</p>
+<p id="step7b">The number of kilometres travelled for personal driving cannot exceed 1,667 kilometres per 30-day period or 20,004 kilometres in the year to meet one of the conditions for the reduced standby charge.</p>
 <p>Use the following to calculate the limit that applies to the number of kilometres travelled for personal driving:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
@@ -613,7 +613,7 @@
 </details></details> </li>
  
 <li><details><summary>Calculate the personal-use quotient for the reduced standby charge</summary> 
-<p id="step9c">Use the following to calculate the personal use quotient:</p>
+<p id="step7c">Use the following to calculate the personal use quotient:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
