--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -394,6 +394,8 @@
  <li class="cnjnctn-col">Automobile <strong>standby charge</strong> benefit related to the availability and personal driving </li>
  <li class="cnjnctn-col">Automobile <a href="#opercost2" aria-controls="centred-popup" class="wb-lbx" role="button">operating expense&nbsp;<span class="far fa-question-circle"></span></a> benefit when you pay the operating costs of the automobile subject to a standby charge</li>
 </ul>
+<p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> You can use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> that will calculate the benefit for you.</p>
+
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
@@ -671,13 +673,12 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><span class="fas fa-check fa-lg text-success"></span> If the the employee <strong>does not</strong> meet all conditions to be eligible for the reduced standby charge continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></li>
-                         <li class="cnjnctn-col"> <span class="fas fa-check fa-lg text-success"></span> If the the employee meets all conditions to be eligible for the reduced standby charge continue to: <a href="#standbyreduce">Step 8 - Calculate the reduced standby charge benefit</a> </li>
+                         <li class="cnjnctn-col"> <span class="fas fa-check fa-lg text-success"></span> If the the employee meets <strong>all</strong> conditions to be eligible for the reduced standby charge continue to: <a href="#standbyreduce">Step 8 - Calculate the reduced standby charge benefit</a> </li>
                           </ul>
 </li>
 
 
 <li><h3 id="step8">Calculate the standby charge benefit</h3>
-<p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> You can use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> that will calculate the benefit for you.</p>
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
 <details><summary>How to calculate the value using estimates during the year</summary>
 <p>During the year, you must calculate the value of the benefit using estimates. To obtain the amount you must add to the employee’s salary for a given pay period, you must divide the value of the benefit you have 
