--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -406,8 +406,6 @@
 <li><h3 id="step6">Review the required information (logbook) your employee must have kept </h3>
 <div data-ajax-replace="ajax/records-vehicle.txt"></div>
 <br/>
-<h4>Get the required records from your employee</h4>
-<p id="reduce">Your employee may be eligible for the <strong>reduced standby charge</strong> if your employee gives you the <strong>required records</strong> to accurately calculate the vehicle benefit. Based on these records, you need to determine if you can use the reduced standby charge calculation. </p>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
@@ -418,6 +416,8 @@
 </li>
 
 <li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
+<p id="reduce">Your employee may be eligible for the <strong>reduced standby charge</strong> if your employee gives you the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> to accurately calculate the vehicle benefit. Based on these records, you need to determine if you can use the reduced standby charge calculation. </p>
+
 <p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:</p>
 
 <details><summary><strong>Condition 1</strong>: The employee is required to use the automobile in connection with or in the course of an office or employment</summary>
@@ -2188,7 +2188,11 @@ estimated by the number of pay periods in the year. </p>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/availability-vehicle.txt"></div>
 	</div></section>
 
-	
+	<section id="log" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">Logbook - Required information</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/records-vehicle.txt#ajax-log"></div>
+	</div></section>
+
  		 
 	<section id="personal2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered business and personal driving</h2>
 	</header>	<div class="modal-body">		
