--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -405,12 +405,11 @@
 
 <li><h3 id="step6">Review the required information (logbook) your employee must have kept </h3>
 <div data-ajax-replace="ajax/records-vehicle.txt"></div>
-<br/>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the required detailed records and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the <strong> required detailed records</strong> and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a></p></li>
 </ul>
 </li>
