--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -415,7 +415,7 @@
 </li>
 
 <li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
-<p id="reduce">Your employee may be eligible for the <strong>reduced standby charge</strong> if your employee gives you the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> to accurately calculate the vehicle benefit. Based on these records, you need to determine if you can use the reduced standby charge calculation. </p>
+<p id="reduce">Based on the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, you need to determine if you can use the reduced standby charge calculation. </p>
 
 <p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:</p>
 
