--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -419,7 +419,7 @@
 
 <p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:</p>
 
-<details><summary><strong>Condition 1</strong>: The employee is required to use the automobile in connection with or in the course of an office or employment</summary>
+<details><summary><strong>Condition 1</strong>: Your employee is required to use the automobile in connection with or in the course of an office or employment</summary>
 <div id="ajax-work">
 <p id="cond1">You need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
 <hr>
@@ -523,8 +523,8 @@
                            </ul>
 </div></details>
 
-<details><summary><strong>Condition 3</strong>: Number of kilometres of personal driving is within the limit for the reduced standby charge</summary> 
-<p id="cond3">Use the following to calculate the personal use quotient. The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year.</p>
+<details><summary><strong>Condition 3</strong>: Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</summary> 
+<p id="cond3">The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year. Use the following to calculate the personal use quotient. </p>
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
 <li><details><summary>Determine the actual number of kilometres travelled for personal driving</summary> 
@@ -575,7 +575,7 @@
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Judith can use an automobile that was made available by her employer during 150 days of the year. Judith was required to use the automobile in connection with her employment. She used the automobile for business driving 80% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. </p>
+<p>An automobile was made available to Judith by her employer for 150 days of the year. Judith was required to use the automobile in connection with her employment and was also allowed to use it for personal driving. She used the automobile for business driving 80% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. </p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
@@ -613,7 +613,7 @@
 </ul>
 </details></details> </li>
  
-<li><details><summary>Calculate the personal-use quotient for the reduced standby charge</summary> 
+<li><details><summary>Calculate the personal use quotient for the reduced standby charge</summary> 
 <p id="step7c">Use the following to calculate the personal use quotient:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
@@ -633,7 +633,7 @@
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> Personal-use quotient must be less than 1 for the reduced standby charge
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> Personal use quotient must be less than 1 for the reduced standby charge
                                     </span></span> </li>
 </ul>
 
@@ -657,14 +657,14 @@
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5">0.66 is Judith's personal-use quotient which is less than 1 for the reduced standby charge
+                                    </span> <span class="mrgn-tp-0 text-muted h5">0.66 is Judith's personal use quotient which is less than 1 for the reduced standby charge
                                     </span></span> </li>
 </ul>
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal-use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
-                         <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal-use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
+                         <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
                           </ul>
 
 </details>
@@ -1500,7 +1500,7 @@ estimated by the number of pay periods in the year. </p>
                                     </span> <span class="mrgn-tp-0 text-muted h5"> Result B - Limit on number of kilometres travelled for personal driving (step 9b)
                                     </span></span> </li>
 </ul>
-<h4>Step C - Personal-use quotient</h4>   
+<h4>Step C - Personal use quotient</h4>   
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg"> 
  
                                 <li><span class="fa-stack text-success">
@@ -1520,7 +1520,7 @@ estimated by the number of pay periods in the year. </p>
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result C - Personal-use quotient for the reduced standby charge
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result C - Personal use quotient for the reduced standby charge
 	 
                                     </span></span> </li>
 </ul>
@@ -1584,7 +1584,7 @@ estimated by the number of pay periods in the year. </p>
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-percent fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">Result C - Personal-use quotient </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">Result C - Personal use quotient </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -1655,7 +1655,7 @@ estimated by the number of pay periods in the year. </p>
                                     </span> <span class="mrgn-tp-0 text-muted h5"> 8,335 is the result B - Limit on number of kilometres travelled for personal driving (step 9b)
                                     </span></span> </li>
 </ul>
-<h4>Step C - Personal-use quotient</h4>   
+<h4>Step C - Personal use quotient</h4>   
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg"> 
  
                                 <li><span class="fa-stack text-success">
@@ -1675,7 +1675,7 @@ estimated by the number of pay periods in the year. </p>
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> 0.66 is the result C - Personal-use quotient for the reduced standby charge
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> 0.66 is the result C - Personal use quotient for the reduced standby charge
 	 
                                     </span></span> </li>
 </ul>
@@ -1734,7 +1734,7 @@ estimated by the number of pay periods in the year. </p>
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-percent fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">0.66 is the result C - Personal-use quotient </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">0.66 is the result C - Personal use quotient </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
