--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -639,7 +639,7 @@
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Judith can use an automobile that was made available by her employer during 150 days of the year. Judith was required to use the automobile in connection with her employment. She used the automobile for business driving 80% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. </p>
+<p>An automobile was made available to Judith her employer for 150 days of the year. Judith was required to use the automobile in connection with her employment and was also allowed to use it for personal driving. She used the automobile for business driving 80% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. </p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
